--- a/client/src/css/auth/ForgotPassword.module.css
+++ b/client/src/css/auth/ForgotPassword.module.css
@@ -1,4 +1,4 @@
-.signUpPage {
+.forgotPasswordPage {
     background-color: #c9d6ff;
     background: linear-gradient(to right, #ffffff, hsl(242, 100%, 83%));
     display: flex;
@@ -50,7 +50,7 @@
     height: 100px;
 }
 
-.signUpContainer {
+.forgotPasswordContainer {
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 5px 150px rgba(0, 0, 0, 0.35);
@@ -121,7 +121,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 30px 20px;
     animation: leftToRightContainer 1s ease;
@@ -138,7 +138,7 @@
     width: 60px;
 }
 
-.signUpContent {
+.forgotPasswordContent {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -146,7 +146,7 @@
     padding-inline: 40px;
 }
 
-.signUpContent>h2 {
+.forgotPasswordContent>h2 {
     font-weight: bold;
     margin-block: 10px;
 }
@@ -191,12 +191,12 @@
 }
 
 
-.signUpForm {
+.forgotPasswordForm {
     margin-block: 10px;
     width: 100%;
 }
 
-.signUpForm input{
+.forgotPasswordForm input{
     outline: none;
     border: none;
     background-color: transparent;
@@ -204,7 +204,7 @@
     width: 85%;
 }
 
-.signUpForm input:-webkit-autofill { 
+.forgotPasswordForm input:-webkit-autofill { 
     -webkit-background-clip: text;
 }
 
@@ -256,7 +256,7 @@
     margin-inline-end: 5px;
 }
 
-.signUpButtonContainer{
+.forgotPasswordButtonContainer{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -271,7 +271,7 @@
     cursor: pointer;
 }
 
-.signUpButtonContainer>button {
+.forgotPasswordButtonContainer>button {
     background: linear-gradient(30deg, #2b00ff, #1200b2 70%);
     color: #fff;
     font-size: 12px;
@@ -284,7 +284,7 @@
     cursor: pointer;
 }
 
-.signUpButtonContainer>button:hover {
+.forgotPasswordButtonContainer>button:hover {
     background: linear-gradient(30deg, #0b0044, #0b006b 70%);
     border: 1px solid black;
 }
@@ -372,12 +372,12 @@
         display: none;
     }
     
-    .signUpContainer{
+    .forgotPasswordContainer{
         width: 95vw;
         height: 90vh;
     }
 
-    .signUpContent{
+    .forgotPasswordContent{
         padding: 0;
     }
 
@@ -388,7 +388,7 @@
 }
 
 @media (max-width:320px) {
-    .signUpContainer{
+    .forgotPasswordContainer{
         width: 99vw;
     }
 }
