--- a/client/src/css/auth/Login.module.css
+++ b/client/src/css/auth/Login.module.css
@@ -1,4 +1,4 @@
-.signUpPage {
+.loginPage {
     background-color: #c9d6ff;
     background: linear-gradient(to right, #ffffff, hsl(242, 100%, 83%));
     display: flex;
@@ -50,7 +50,7 @@
     height: 100px;
 }
 
-.signUpContainer {
+.loginContainer {
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 5px 150px rgba(0, 0, 0, 0.35);
@@ -70,22 +70,12 @@
 .leftContainer {
     flex: 1;
     height: 100%;
-    background: linear-gradient(240deg, #2b00ff, #7363ff 70%);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 50px;
-    color: white;
-    border-top-right-radius: 50%;
-    border-bottom-right-radius: 50%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px 20px;
     animation: rightToLeftContainer 1s ease;
-    position: relative;
-    z-index: 3;
-}
-
-.leftContainer div{
-    animation: leftToRightContainerContent 1s ease;
     position: relative;
 }
 
@@ -98,7 +88,7 @@
     width: 100%;
 } */
 
-.loginButtonContainer button {
+.signupButtonContainer button {
     background: transparent;
     color: #fff;
     font-size: 12px;
@@ -119,12 +109,22 @@
 .rightContainer {
     flex: 1;
     height: 100%;
+    background: linear-gradient(240deg, #2b00ff, #7363ff 70%);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 20px;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 50px;
+    color: white;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
     animation: leftToRightContainer 1s ease;
+    position: relative;
+    z-index: 3;
+}
+
+.rightContainer div {
+    animation: rightToLeftContainerContent 1s ease;
     position: relative;
 }
 
@@ -138,7 +138,7 @@
     width: 60px;
 }
 
-.signUpContent {
+.loginContent {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -146,7 +146,7 @@
     padding-inline: 40px;
 }
 
-.signUpContent>h2 {
+.loginContent>h2 {
     font-weight: bold;
     margin-block: 10px;
 }
@@ -191,12 +191,15 @@
 }
 
 
-.signUpForm {
+.loginForm {
     margin-block: 10px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.signUpForm input{
+.loginForm input {
     outline: none;
     border: none;
     background-color: transparent;
@@ -204,11 +207,11 @@
     width: 85%;
 }
 
-.signUpForm input:-webkit-autofill { 
+.loginForm input:-webkit-autofill {
     -webkit-background-clip: text;
 }
 
-.nameInputContainer{
+.nameInputContainer {
     margin-block-end: 10px;
     width: 100%;
     background-color: #eee;
@@ -219,12 +222,12 @@
     align-items: center;
 }
 
-.nameInputContainer svg{
+.nameInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.emailInputContainer{
+.emailInputContainer {
     margin-block: 10px;
     width: 100%;
     background-color: #eee;
@@ -235,12 +238,12 @@
     align-items: center;
 }
 
-.emailInputContainer svg{
+.emailInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.passwordInputContainer{
+.passwordInputContainer {
     margin-block: 10px;
     width: 100%;
     background-color: #eee;
@@ -251,27 +254,34 @@
     align-items: center;
 }
 
-.passwordInputContainer svg{
+.passwordInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.signUpButtonContainer{
+.forgotPassword {
+    color: gray;
+    text-decoration: none;
+    margin-block: 2px;
+    margin-block-end: 10px;
+}
+
+.loginButtonContainer {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.privacyText{
+.privacyText {
     color: gray;
 }
 
-.privacyText span{
+.privacyText span {
     color: rgb(0, 72, 255);
     cursor: pointer;
 }
 
-.signUpButtonContainer>button {
+.loginButtonContainer button {
     background: linear-gradient(30deg, #2b00ff, #1200b2 70%);
     color: #fff;
     font-size: 12px;
@@ -284,19 +294,19 @@
     cursor: pointer;
 }
 
-.signUpButtonContainer>button:hover {
+.loginButtonContainer>button:hover {
     background: linear-gradient(30deg, #0b0044, #0b006b 70%);
     border: 1px solid black;
 }
 
-.mobileLoginButtonContainer {
+.mobileSignUpButtonContainer {
     width: 100%;
     display: none;
     flex-direction: column;
     align-items: center;
 }
 
-.mobileLoginButtonContainer button {
+.mobileSignUpButtonContainer button {
     background: black;
     color: #fff;
     font-size: 12px;
@@ -309,34 +319,23 @@
     cursor: pointer;
 }
 
-.mobileLoginButtonContainer button:hover {
+.mobileSignUpButtonContainer button:hover {
     background: linear-gradient(30deg, #0b0044, #0b006b 70%);
 }
-
 
 /* Keyframes */
 @keyframes rightToLeftContainer {
     0% {
-        transform: translateX(88%);
-        border-top-right-radius: 0%;
-        border-bottom-right-radius: 0%;
-        border-top-left-radius: 50%;
-        border-bottom-left-radius: 50%;
+        transform: translateX(100%);
+        opacity: 1;
     }
 
-    100% {
-        transform: translateX(0px);
-    }
-}
-
-@keyframes leftToRightContainerContent {
-    0% {
+    10% {
         opacity: 0;
     }
 
-    50%{
+    25% {
         opacity: 0;
-        transform: translateX(-360px);
     }
 
     100% {
@@ -347,16 +346,26 @@
 
 @keyframes leftToRightContainer {
     0% {
-        transform: translateX(-100%);
-        opacity: 1;
+        transform: translateX(-88%);
+        border-top-right-radius: 50%;
+        border-bottom-right-radius: 50%;
+        border-top-left-radius: 0%;
+        border-bottom-left-radius: 0%;
     }
 
-    10%{
+    100% {
+        transform: translateX(0px);
+    }
+}
+
+@keyframes rightToLeftContainerContent {
+    0% {
         opacity: 0;
     }
 
-    25%{
+    50% {
         opacity: 0;
+        transform: translateX(360px);
     }
 
     100% {
@@ -365,30 +374,28 @@
     }
 }
 
-
-
 @media (max-width:564px) {
-    .leftContainer {
+    .rightContainer {
         display: none;
     }
-    
-    .signUpContainer{
+
+    .loginContainer{
         width: 95vw;
         height: 90vh;
     }
 
-    .signUpContent{
+    .loginContent{
         padding: 0;
     }
 
 
-    .mobileLoginButtonContainer {
+    .mobileSignUpButtonContainer {
         display: flex;
     }
 }
 
 @media (max-width:320px) {
-    .signUpContainer{
+    .loginContainer{
         width: 99vw;
     }
 }
