--- a/client/src/css/auth/ForgotPassword.module.css
+++ b/client/src/css/auth/ForgotPassword.module.css
@@ -84,7 +84,7 @@
     z-index: 3;
 }
 
-.leftContainer div{
+.leftContainer div {
     animation: leftToRightContainerContent 1s ease;
     position: relative;
 }
@@ -196,7 +196,7 @@
     width: 100%;
 }
 
-.forgotPasswordForm input{
+.forgotPasswordForm input {
     outline: none;
     border: none;
     background-color: transparent;
@@ -204,11 +204,11 @@
     width: 85%;
 }
 
-.forgotPasswordForm input:-webkit-autofill { 
+.forgotPasswordForm input:-webkit-autofill {
     -webkit-background-clip: text;
 }
 
-.nameInputContainer{
+.nameInputContainer {
     margin-block-end: 10px;
     width: 100%;
     background-color: #eee;
@@ -219,12 +219,12 @@
     align-items: center;
 }
 
-.nameInputContainer svg{
+.nameInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.emailInputContainer{
+.emailInputContainer {
     margin-block: 10px;
     width: 100%;
     background-color: #eee;
@@ -235,12 +235,12 @@
     align-items: center;
 }
 
-.emailInputContainer svg{
+.emailInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.passwordInputContainer{
+.passwordInputContainer {
     margin-block: 10px;
     width: 100%;
     background-color: #eee;
@@ -251,22 +251,22 @@
     align-items: center;
 }
 
-.passwordInputContainer svg{
+.passwordInputContainer svg {
     font-size: 20px;
     margin-inline-end: 5px;
 }
 
-.forgotPasswordButtonContainer{
+.forgotPasswordButtonContainer {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.privacyText{
+.privacyText {
     color: gray;
 }
 
-.privacyText span{
+.privacyText span {
     color: rgb(0, 72, 255);
     cursor: pointer;
 }
@@ -313,6 +313,29 @@
     background: linear-gradient(30deg, #0b0044, #0b006b 70%);
 }
 
+.passwordSentContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.passwordSentIcon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.passwordSentIcon img {
+    width: 100px;
+    height: 100px;
+}
+
+.passwordSentContainer p{
+    margin-block: 15px;
+}
 
 /* Keyframes */
 @keyframes rightToLeftContainer {
@@ -334,7 +357,7 @@
         opacity: 0;
     }
 
-    50%{
+    50% {
         opacity: 0;
         transform: translateX(-360px);
     }
@@ -351,11 +374,11 @@
         opacity: 1;
     }
 
-    10%{
+    10% {
         opacity: 0;
     }
 
-    25%{
+    25% {
         opacity: 0;
     }
 
@@ -371,13 +394,13 @@
     .leftContainer {
         display: none;
     }
-    
-    .forgotPasswordContainer{
+
+    .forgotPasswordContainer {
         width: 95vw;
         height: 90vh;
     }
 
-    .forgotPasswordContent{
+    .forgotPasswordContent {
         padding: 0;
     }
 
@@ -388,7 +411,7 @@
 }
 
 @media (max-width:320px) {
-    .forgotPasswordContainer{
+    .forgotPasswordContainer {
         width: 99vw;
     }
 }
