--- a/client/src/css/auth/ResetPassword.module.css
+++ b/client/src/css/auth/ResetPassword.module.css
@@ -121,7 +121,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     padding: 30px 20px;
     animation: leftToRightContainer 1s ease;
@@ -281,7 +281,6 @@
     font-weight: bold;
     letter-spacing: 0.5px;
     text-transform: uppercase;
-    cursor: pointer;
 }
 
 .resetPasswordButtonContainer>button:hover {
@@ -313,6 +312,13 @@
     background: linear-gradient(30deg, #0b0044, #0b006b 70%);
 }
 
+.inputErrorText{
+    color: red;
+    font-size: 13px;
+    width: 100%;
+    text-align: right;
+    margin-block: 10px;
+}
 
 /* Keyframes */
 @keyframes rightToLeftContainer {
