--- a/client/src/css/auth/ResetPassword.module.css
+++ b/client/src/css/auth/ResetPassword.module.css
@@ -121,7 +121,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    gap: 50px;
     align-items: center;
     padding: 30px 20px;
     animation: leftToRightContainer 1s ease;
@@ -135,7 +136,7 @@
 }
 
 .logoContainer img {
-    width: 60px;
+    width: 250px;
 }
 
 .resetPasswordContent {
@@ -206,38 +207,6 @@
 
 .resetPasswordForm input:-webkit-autofill { 
     -webkit-background-clip: text;
-}
-
-.nameInputContainer{
-    margin-block-end: 10px;
-    width: 100%;
-    background-color: #eee;
-    padding: 5px 10px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.nameInputContainer svg{
-    font-size: 20px;
-    margin-inline-end: 5px;
-}
-
-.emailInputContainer{
-    margin-block: 10px;
-    width: 100%;
-    background-color: #eee;
-    padding: 5px 10px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.emailInputContainer svg{
-    font-size: 20px;
-    margin-inline-end: 5px;
 }
 
 .passwordInputContainer{
