--- a/client/src/css/auth/ForgotPassword.module.css
+++ b/client/src/css/auth/ForgotPassword.module.css
@@ -121,7 +121,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 50px;
     align-items: center;
     padding: 30px 20px;
     animation: leftToRightContainer 1s ease;
@@ -135,7 +136,7 @@
 }
 
 .logoContainer img {
-    width: 60px;
+    width: 250px;
 }
 
 .forgotPasswordContent {
