--- a/client/src/css/home/layout/Products/ProductCard.module.css
+++ b/client/src/css/home/layout/Products/ProductCard.module.css
@@ -6,11 +6,16 @@
     width: 304px;
     height: 406px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 10px;
 }
 
 .productImageContainer{
     width: 100%;
     height: 300px;
+
     
 }
 
@@ -21,31 +26,41 @@
     
 }
 
-.productInfo{
-    margin: 15px 15px;
+.productTitle{
+    font-size: 21px;
+    font-weight: 500;
+    margin: 0px;
+    margin-top: 10px;
+    margin-left: 15px;
 }
 
-.productInfo h4{
-    font-size: 18px;
-    font-weight: 700;
+.product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.productInfo{
+    margin: 0px 15px;
+    margin-bottom: 5px;
 }
 
 .priceContainer{
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-end;
     gap: 5px;
 }
 
 .priceContainer h5{
-    font-size: 17px;
-    font-weight: 600;
+    font-size: 23px;
     margin: 0px;
     padding: 0px;
+    font-weight: 700;
 }
 
-.priceContainer del{
-    font-size: 16px;
+.priceContainer p{
+    font-size: 12px;
     margin: 0px;
     padding: 0px;
 }
@@ -55,8 +70,26 @@
     justify-content: flex-start;
     align-items: center;
     gap: 2px;
+    margin-left: 15px;
 }
 
 .ratingContainer p{
     margin: 0px;
+}
+
+.purchaseContainer{
+    height: 100%;
+    margin-inline: 10px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.addToCartButton{
+    background-color: rgb(29, 29, 29);
+    color: white;
+    border: none;
+    padding: 7px 10px;
+    border-radius: 10px;
+    font-family: Verdana, sans-serif;
+    white-space: nowrap;
 }
