--- a/client/src/css/home/layout/Products/ProductCard.module.css
+++ b/client/src/css/home/layout/Products/ProductCard.module.css
@@ -16,7 +16,6 @@
     width: 100%;
     height: 300px;
 
-    
 }
 
 .productImageContainer img{
@@ -92,4 +91,19 @@
     border-radius: 10px;
     font-family: Verdana, sans-serif;
     white-space: nowrap;
+}
+
+.purchaseInQuantityContainer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-radius: 12px;
+}
+
+.purchaseInQuantityContainer p {
+    padding: 0px;
+    margin: 0px;
 }
