--- a/client/src/css/home/layout/Products/Products.module.css
+++ b/client/src/css/home/layout/Products/Products.module.css
@@ -8,3 +8,9 @@
     flex-wrap: wrap;
     gap: 40px;
 }
+
+@media (max-width:375px) {
+    .productsSection{
+        margin-inline: 0rem;
+    }
+}
