--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+
 body {
   margin: 0;
+  overflow-x: hidden !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,3 +10,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+body::-webkit-scrollbar-track {
+  background-color: rgb(198, 198, 198);
+}
+
+
+body::-webkit-scrollbar-thumb {
+  background: rgb(102, 102, 102);
+  border-radius: 10px;
+}
+
+
+body::-webkit-scrollbar-thumb:hover {
+  background: rgb(90, 90, 90);
+}
