--- a/client/src/css/cart/FloatingCart.module.css
+++ b/client/src/css/cart/FloatingCart.module.css
@@ -64,6 +64,7 @@
 .cartProductsContainer::-webkit-scrollbar {
   width: 5px;
   border-radius: 50%;
+  height: 5px;
 }
 
 .cartProductsContainer::-webkit-scrollbar-thumb {
@@ -80,35 +81,39 @@
 
 } */
 
-.floatingCartProductContainer{
+.floatingCartProductContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-block: 10px;
+  max-width: 97vw;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
-.floatingCartProductTexts{
+.floatingCartProductTexts {
   width: 100%;
 }
 
-.floatingCartProductTitle{
+.floatingCartProductTitle {
   font-weight: 600;
   padding: 0px;
   margin: 0px;
 }
 
-.floatingCartProductImageContainer{
+.floatingCartProductImageContainer {
+  min-width: 70px;
   width: 70px;
 }
 
-.floatingCartProductImageContainer img{
+.floatingCartProductImageContainer img {
   width: 100%;
   border: 1px solid gray;
   border-radius: 5px;
 }
 
 
-.floatingCartProductInfo{
+.floatingCartProductInfo {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -119,6 +124,7 @@
   justify-content: flex-start;
   align-items: flex-end;
   gap: 5px;
+  margin-right: 2px;
 }
 
 .priceContainer p:nth-child(1) {
@@ -143,7 +149,7 @@
   gap: 10px;
   box-shadow: inset 0px 0px 0px 1px #000000;
   border-radius: 12px;
-  margin-right: 25px;
+  margin-right: 15px;
 }
 
 .addToCartButton {
@@ -175,7 +181,7 @@
 
 
 
-.floatingCartButtonContainer{
+.floatingCartButtonContainer {
   margin-top: 5px;
 }
 
@@ -210,8 +216,23 @@
   background: linear-gradient(240deg, #2000bf, #321bff 70%);
 }
 
-@media (max-width:322px) {
-  .floatingCartContainer{
+@media (max-width:360px) {
+  .floatingCartContainer {
     padding-inline: 5px;
+    max-width: 99vw;
+  }
+
+  .floatingCartProductImageContainer{
+    min-width: 50px;
+  }
+
+  .floatingCartProductQuantityContainer {
+    margin-right: 10px;
+  }
+}
+
+@media (max-width:319px) {
+  .floatingCartProductInfo {
+    flex-direction: column;
   }
 }
